@@ -1,0 +1,11 @@
+var TacticalAI = {
+	handleUnitEvent: function(unit, event, params)
+	{
+		switch (event)
+		{
+			case 'standing_too_far':
+				break;
+		}
+	}
+};
+
