@@ -31,6 +31,15 @@ var PLAYER_COMPUTER1 = 2;
 var RESOURCE_TAELON = 1;
 var RESOURCE_WATER = 2;
 
+var TACTIC_ORDER_DEFAULT = 0;
+var TACTIC_ORDER_SCOUT = 1;
+var TACTIC_ORDER_HARASS = 2;
+var TACTIC_ORDER_SND = 3;
+var TACTIC_LOW = 1;
+var TACTIC_MED = 2;
+var TACTIC_HIGH = 3;
+
+
 var AUDIO_TYPE = 'ogg';
 
 var game;
